// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VToolbar.vue should render an extended toolbar 1`] = `

<nav class="toolbar elevation-0 toolbar--extended">
  <div class="toolbar__content"
       style="height: 56px;"
  >
  </div>
  <div class="toolbar__extension"
       style="height: 56px;"
  >
  </div>
</nav>

`;

exports[`VToolbar.vue should render an extended toolbar with specific height 1`] = `

<nav class="toolbar elevation-0 toolbar--extended">
  <div class="toolbar__content"
       style="height: 56px;"
  >
  </div>
  <div class="toolbar__extension"
       style="height: 42px;"
  >
  </div>
</nav>

`;
